- Changed error level E_ERROR into E_WARNING in Soap extension methods 
  parameter validation. (Felipe)

- Changed openssl info to show the shared library version number. (Scott)

- Added ability to send user defined HTTP headers with SOAP request.
  (Brain J.France, Dmitry)

- Fixed bug causing the algorithm parameter of mhash() to be modified. (Scott)

- Fixed bug #46206 (pg_query_params/pg_execute convert passed values to
  strings). (Ilia) 
- Fixed bug #46205 (Closure - Memory leaks when ReflectionException is thrown).
  (Dmitry)
- Fixed bug #46194 (SIGSEGV when requested file is not found). (Greg)
- Fixed bug #46185 (importNode changes the namespace of an XML element). (Rob)
- Fixed bug #46178 (memory leak in ext/phar). (Greg)
- Fixed bug #46160 (SPL - Memory leak when exception is thrown in offsetSet).
  (Felipe)
- Fixed Bug #46147 (after stream seek, appending stream filter reads incorrect data).
  (Greg)
- Fixed bug #46115 (Memory leak when calling a method using Reflection).
  (Dmitry)
- Fixed bug #46106 (Memory leaks when using global statement). (Dmitry)
- Fixed bug #46099 (Xsltprocessor::setProfiling - memory leak). (Felipe, Rob).
- Fixed bug #46087 (DOMXPath - segfault on destruction of a cloned object).
  (Ilia)
- Fixed bug #46086 (Segfault when accessing fileinfo class properties).
  (Scott)
- Fixed bug #46071 (finfo_open() segfaults when using wrong file name on BSD).
  (Felipe)
- Fixed bug #46060 (Phar::addEmptyDir() breaks) (Greg)
- Fixed bug #46042 (memory leaks with reflection of mb_convert_encoding()).
  (Ilia)
- Fixed bug #45928 (large scripts from stdin are stripped at 16K border).
  (Christian Schneider, Arnaud)
- Fixed bug #45911 (Cannot disable ext/hash). (Arnaud)
- Fixed bug #45392 (ob_start()/ob_end_clean() and memory_limit). (Ilia)
- Fixed bug #45382 (timeout bug in stream_socket_enable_crypto).
  (vnegrier at optilian dot com, Ilia)
- Fixed bug #46192 (ArrayObject with objects as storage serialization).
  (Etienne)
